# KAVACH-Sovereign-Intelligence

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  KAVACH_Complete.ipynb  KAVACH_Gandharva_Integration.ipynb  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  akasha_ledger.json  api.py  kavach_main.py  requirements.txt
assets/: benchmark_snippet.txt
cpp-engine/: CMakeLists.txt  Dockerfile  PAPER_ABSTRACT.md
cpp-engine/include/kavach/: aho_corasick.hpp  akasha.hpp  charaka.hpp  hs_nyaya.hpp  nyaya.hpp  sutra.hpp
cpp-engine/rules/: README.md  nyaya_50k_rules.txt
cpp-engine/src/: aho_benchmark.cpp  main.cpp  main_kw.cpp  nyaya.cpp
cpp-engine/tests/: benchmark_nyaya.cpp
cpp-engine/tools/: cluster_node.py  generate_rules  generate_rules.cpp  threat_pipeline.sh
gusec-application/: 01-executive-summary.md  02-problem-statement.md  03-budget.md  04-team.md  FULL_APPLICATION.md  KAVACH_Pitch_Deck.md
modules/: __init__.py  akasha.py  charaka.py  dharma.py  dharma_policies.yaml  dharma_watchdog.py  gandharva.py  gandharva_vishing.py  nyaya.py  sushruta.py
tests/: build_scam_dataset.py  test_real_threats.py
